# chap1-poshub-api

./: .coverage  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  event.json  pyproject.toml  sam-min.yml  template.yaml  test_ssm_simple.py
.github/workflows/: ci.yml
layers/python-deps/python/PyYAML-6.0.2.dist-info/: RECORD
layers/python-deps/python/botocore-1.39.9.dist-info/: RECORD
layers/python-deps/python/cffi-1.17.1.dist-info/: RECORD
layers/python-deps/python/cryptography-41.0.7.dist-info/: RECORD
layers/python-deps/python/fastapi-0.116.1.dist-info/: RECORD
layers/python-deps/python/flake8-6.0.0.dist-info/: RECORD
layers/python-deps/python/httptools-0.6.4.dist-info/: RECORD
layers/python-deps/python/httpx-0.27.2.dist-info/: RECORD
layers/python-deps/python/jmespath-1.0.1.dist-info/: RECORD
layers/python-deps/python/mccabe-0.7.0.dist-info/: RECORD
layers/python-deps/python/pycodestyle-2.10.0.dist-info/: RECORD
layers/python-deps/python/pydantic_core-2.33.2.dist-info/: RECORD
layers/python-deps/python/pyflakes-3.0.1.dist-info/: RECORD
layers/python-deps/python/python_dotenv-1.1.1.dist-info/: RECORD
layers/python-deps/python/s3transfer-0.13.1.dist-info/: RECORD
layers/python-deps/python/starlette-0.47.1.dist-info/: RECORD
layers/python-deps/python/tenacity-8.5.0.dist-info/: RECORD
layers/python-deps/python/uvicorn-0.35.0.dist-info/: RECORD
layers/python-deps/python/watchfiles-1.1.0.dist-info/: RECORD
layers/python-deps/python/websockets-15.0.1.dist-info/: RECORD
openapi/: poshub_v1.json
scripts/: create_ssm_parameter.py  export_openapi.py  fix_formatting.py  test_ssm_util.py
src/: main.py
src/api/dependencies/: auth.py
src/api/middleware/: correlation_id.py  error_handler.py
src/api/routes/: auth.py  external.py  orders.py
src/domain/exceptions/: order_exceptions.py
src/domain/schemas/: order.py
src/domain/services/: order_service.py
src/shared/auth/: __init__.py  jwt_service.py
src/shared/config/: jwt_config.py  settings.py
src/shared/http/: client.py  exceptions.py
src/shared/schemas/: error.py
src/shared/utils/: ssm_utils.py
tests/: conftest.py  test_auth.py  test_external.py  test_order_service.py
