[project]
name = "poshub-api"
version = "0.1.0"
description = "poshub api built with FastAPI"
authors = [
    {name = "Hasna"}
]
readme = "README.md"
requires-python = "^3.13.3"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "httpx (>=0.27.0,<0.28.0)",
    "structlog (>=24.1.0,<25.0.0)",
    "tenacity (>=8.2.3,<9.0.0)",
    "pyjwt (>=2.8.0,<3.0.0)",
    "cryptography (>=41.0.0,<42.0.0)",
    "python-multipart (>=0.0.6,<0.1.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "flake8 (==6.0.0)",
]

[tool.poetry]
name = "poshub-api"
version = "0.1.0"
description = "poshub api built with FastAPI"
authors = ["Hasna"]
packages = [
    { include = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
requests = "^2.31.0"
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
pytest-cov = "^6.2.1"
respx = "^0.21.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=80"
]
markers = [
    "asyncio: marks tests as async",
    "slow: marks tests as slow",
    "integration: marks tests as integration tests"
]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
